fixed tables alignment

--- a/gatsby-site/src/pages/styles.css
+++ b/gatsby-site/src/pages/styles.css
@@ -1,3 +1,7 @@
 td {
     border: none;
 }
+
+.work-table, .edu-table {
+    table-layout: fixed;
+}
